Fix for container padding causing width overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -314,7 +314,7 @@ nav h1 a {
 	nav h1 a {
 	  font-size: 20pt;
 	}
-
+/* Main page */
 	#map {
 		height: 600px;
 	}
@@ -390,5 +390,104 @@ nav h1 a {
 	.filter-options option {
 		padding: 20px;
 	}
+/* Resturant Details*/
+.inside header {
+  position: relative;
+  width: 100%;
+}
+.inside #map-container {
+  height: 600px;
+  position: relative;
+  width: 100%;
+	top: 0;
+}
+.inside #map {
+  background-color: #ccc;
+  height: 100%;
+  width: 100%;
+}
+.inside #footer {
+  position: relative;
+  box-sizing:border-box;
+}
+#restaurant-name {
+  color: #f18200;
+  font-family: Arial,sans-serif;
+  font-size: 20pt;
+  font-weight: 200;
+  letter-spacing: 0;
+  margin: 15px 0 30px;
+  text-transform: uppercase;
+  line-height: 1.1;
+}
+#restaurant-img {
+	width: 100%;
+}
+#restaurant-address {
+  font-size: 12pt;
+  margin: 10px 0px;
+}
+#restaurant-cuisine {
+  background-color: #333;
+  color: #ddd;
+  font-size: 12pt;
+  font-weight: 300;
+  letter-spacing: 10px;
+  margin: 0 0 20px;
+  padding: 2px 0;
+  text-align: center;
+  text-transform: uppercase;
+	width: 100%;
+}
+#restaurant-container, #reviews-container {
+  border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #fff;
+  padding: 0;
+  width: 100%;
+	box-sizing:border-box;
+	padding: 50px;
+}
+#reviews-container {
+  padding: 50px;
+	position: relative;
+	width: 100%;
+	box-sizing:border-box;
+}
+#reviews-container h2 {
+  color: #f58500;
+  font-size: 24pt;
+  font-weight: 300;
+  letter-spacing: -1px;
+  padding-bottom: 1pt;
+}
+#reviews-list {
+  margin: 0;
+  padding: 0;
+	width: 100%;
+}
+#reviews-list li {
+  background-color: #fff;
+    border: 2px solid #f3f3f3;
+  display: block;
+  list-style-type: none;
+  margin: 0 0 30px;
+  overflow: hidden;
+  padding: 20px;
+  position: relative;
+	width: 100%;
+	box-sizing:border-box;
+}
+#reviews-list li p {
+  margin: 0 0 10px;
+}
+#restaurant-hours td {
+  color: #666;
+	font-size: 20pt;
+}
+
+.inside #breadcrumb {
+	width: 100%;
+	box-sizing:border-box;
+}
 
 }
